test/testdata/string/not_callable_error.lox
"foo"(); // error: 'string' value is not callable
